--- a/src/locale/messages.xlf
+++ b/src/locale/messages.xlf
@@ -33,7 +33,7 @@
         <note priority="1" from="description">Search bar placeholder</note>
       </trans-unit>
       <trans-unit id="mediaTypeMovies" datatype="html">
-        <source>Movies</source>
+        <source>Movie</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/constants/common-values.ts</context>
           <context context-type="linenumber">7</context>
